--- a/app/src/main/res/layout/activity_create_reminder.xml
+++ b/app/src/main/res/layout/activity_create_reminder.xml
@@ -13,18 +13,18 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Save"
+        android:text="@string/reminderSaveBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameLabel"
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Name"
+        android:text="@string/ReminderNameLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/nameTextField"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
@@ -43,12 +43,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
+        android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/descTextField"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="65dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
@@ -58,10 +59,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/descriptionLabal"
+        android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editTextTime"
+        android:id="@+id/timeTextField"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
@@ -69,15 +71,16 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Enter Time"
+        android:hint="@string/ReminderTimeHint"
         android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/timeLabel"
+        android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/dateTextField"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
@@ -85,76 +88,92 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:focusable="false"
-        android:hint="Enter Date"
+        android:hint="@string/ReminderDateHint"
         android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/dateLabel"
+        android:autofillHints=""
+        tools:ignore="TextFields" />
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/descriptionLabal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:text="Description"
+        android:text="@string/ReminderDescLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/nameTextField" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/timeLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:text="Time:"
+        android:text="@string/ReminderTimeLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/descTextField" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/dateLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:text="Date:"
+        android:text="@string/ReminderDateLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />
+        app:layout_constraintTop_toBottomOf="@+id/timeTextField" />
 
     <RadioGroup
+        android:id="@+id/notifyRadioGroup"
         android:layout_width="0dp"
         android:layout_height="57dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate">
+        app:layout_constraintTop_toBottomOf="@+id/notifyLabel">
 
         <RadioButton
-            android:id="@+id/radio_ninjas"
+            android:id="@+id/notifyAlarmRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:text="Alarm" />
+            android:paddingEnd="16dp"
+            android:text="@string/ReminderRadioAlarm"
+            tools:ignore="RtlSymmetry" />
 
         <RadioButton
-            android:id="@+id/radio_pirates"
+            android:id="@+id/notifyNofiticationRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notify" />
+            android:text="@string/ReminderRadioNotification" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/notifyLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/ReminderRadioNofify"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateTextField" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
