--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,5 +10,10 @@
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
+    <item
+        android:id="@+id/navigation_delete"
+        android:icon="@drawable/baseline_delete_24"
+        android:title="@string/title_delete"
+        android:visible="false"/>
 
 </menu>
