--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,11 @@
         android:id="@+id/navigation_home"
         android:name="com.schwada.reminderapp.ui.reminders_active.RemindersActiveFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_reminders_active" />
+        tools:layout="@layout/fragment_reminders_active">
+        <action
+            android:id="@+id/action_fragmentA_to_activityB"
+            app:destination="@id/createReminderActivity" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.schwada.reminderapp.ui.dashboard.DashboardFragment"
