--- a/app/src/main/res/layout/cell_reminder.xml
+++ b/app/src/main/res/layout/cell_reminder.xml
@@ -5,77 +5,96 @@
     android:id="@+id/reminderCellContainer"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:cardBackgroundColor="@android:color/transparent"
     app:cardCornerRadius="20dp"
     app:cardElevation="0dp"
-    app:cardMaxElevation="0dp">
+    app:cardMaxElevation="0dp"
+    app:contentPadding="1dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/reminderCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/viewIsSelected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/viewReminderName"
-            style="@style/TextAppearance.AppCompat.Title"
-            android:layout_width="144dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="Placeholder"
-            android:textAllCaps="false"
-            android:textColor="#555555" />
-
-        <ImageView
-            android:id="@+id/viewIsNotify"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:paddingTop="24dp"
-            android:paddingBottom="24dp"
-            app:tint="#666666"
-            app:srcCompat="@drawable/ic_notifications_black_24dp" />
+        android:background="#ffffff"
+        app:cornerRadius="20dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="10dp">
+
+            <CheckBox
+                android:id="@+id/viewIsSelected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/viewReminderDate"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:gravity="bottom"
-                android:text="12.1.2020"
-                android:textColor="#333333"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:id="@+id/viewReminderName"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="128dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="16dp"
+                android:layout_weight="1"
+                android:text="Placeholder"
+                android:textAllCaps="false"
+                android:textColor="#555555" />
 
-            <TextView
-                android:id="@+id/viewReminderTime"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/viewIsNotify"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="0dp"
-                android:layout_weight="0.5"
-                android:text="15:55"
-                android:textColor="#333333"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:paddingTop="24dp"
+                android:paddingBottom="24dp"
+                app:srcCompat="@drawable/ic_notifications_black_24dp"
+                app:tint="#666666" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/viewReminderDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:gravity="bottom"
+                    android:text="12.1.2020"
+                    android:textColor="#333333"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/viewReminderTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="0.5"
+                    android:text="15:55"
+                    android:textColor="#333333"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
