--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_ok"
-        android:title="OK"
-        android:icon="@drawable/baseline_check_24"
-        app:showAsAction="always"/>
+        android:id="@+id/action_close"
+        android:icon="@drawable/baseline_close_24"
+        android:title="@string/ReminderRadioAlarm"
+        android:visible="false"
+        app:showAsAction="always" />
 
 </menu>
