WIP notification for reminders

--- a/app/src/main/res/layout/fragment_reminders_archived.xml
+++ b/app/src/main/res/layout/fragment_reminders_archived.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.reminders_archived.RemindersArchivedFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/archivedRemindersViewer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
