--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,9 +15,9 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.schwada.reminderapp.ui.dashboard.DashboardFragment"
+        android:name="com.schwada.reminderapp.ui.reminders_archived.RemindersArchivedFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_reminders_archived" />
     <activity
         android:id="@+id/createReminderActivity"
         android:name="com.schwada.reminderapp.ui.create.CreateReminderActivity"
